--- a/walmart_store_sales_forecasting_KAGGLE_COMPETITION_2019.ipynb
+++ b/walmart_store_sales_forecasting_KAGGLE_COMPETITION_2019.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "walmart-store-sales-forecasting/KAGGLE_COMPETITION_2019.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ViditPy/Walmart-Store-Sales_Forecast-KAGGLE_COMPETITION_2019-PYTHON-ML/blob/master/walmart_store_sales_forecasting_KAGGLE_COMPETITION_2019.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -97,7 +108,7 @@
         "from pandasql import sqldf\n",
         "pysqldf = lambda q: sqldf(q, globals())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +125,7 @@
         "test = pd.read_csv('../input/walmart-recruiting-store-sales-forecasting/test.csv.zip')\n",
         "sample_submission = pd.read_csv('../input/walmart-recruiting-store-sales-forecasting/sampleSubmission.csv.zip')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +178,7 @@
       "source": [
         "feat_sto = features.merge(stores, how='inner', on='Store')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +192,7 @@
       "source": [
         "feat_sto.head(5)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +373,7 @@
       "source": [
         "pd.DataFrame(feat_sto.dtypes, columns=['Type'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +507,7 @@
       "source": [
         "train.head(5)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +610,7 @@
       "source": [
         "pd.DataFrame({'Type_Train': train.dtypes, 'Type_Test': test.dtypes})"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +696,7 @@
         "train.Date = pd.to_datetime(train.Date)\n",
         "test.Date = pd.to_datetime(test.Date)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +720,7 @@
         "feat_sto['Week'] = feat_sto.Date.dt.week \n",
         "feat_sto['Year'] = feat_sto.Date.dt.year"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +747,7 @@
         "                                                                            'Dept',\n",
         "                                                                            'Date']).reset_index(drop=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,7 +764,7 @@
         "                                                                            'Dept',\n",
         "                                                                            'Date']).reset_index(drop=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +777,7 @@
       "source": [
         "del features, train, stores, test"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -799,7 +810,7 @@
         "null_data = null_data[null_data[\"# null\"]!=0]\n",
         "null_data"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -959,7 +970,7 @@
         "        FROM feat_sto\n",
         "        WHERE IsHoliday = True) as T\"\"\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1181,7 @@
         "plt.xlabel('Week', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1216,7 +1227,7 @@
         "train_detail.loc[(train_detail.Year==2012) & (train_detail.Week==14), 'IsHoliday'] = True\n",
         "test_detail.loc[(test_detail.Year==2013) & (test_detail.Week==13), 'IsHoliday'] = True"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1250,7 +1261,7 @@
         "plt.xlabel('Date', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1305,7 +1316,7 @@
         "plt.xlabel('Store', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1350,7 +1361,7 @@
         "plt.xlabel('Dept', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1439,7 +1450,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1480,7 +1491,7 @@
         "train_detail = train_detail.drop(columns=['Fuel_Price','MarkDown1','MarkDown2','MarkDown3','MarkDown4','MarkDown5'])\n",
         "test_detail = test_detail.drop(columns=['Fuel_Price','MarkDown1','MarkDown2','MarkDown3','MarkDown4','MarkDown5'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1526,7 +1537,7 @@
         "    plt.xlabel(feature, fontsize=16)\n",
         "    fig.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1566,7 +1577,7 @@
         "    \n",
         "    fig.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1590,7 +1601,7 @@
       "source": [
         "make_discrete_plot('IsHoliday')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1637,7 +1648,7 @@
       "source": [
         "make_discrete_plot('Type')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1676,7 +1687,7 @@
         "train_detail.Type = train_detail.Type.apply(lambda x: 3 if x == 'A' else(2 if x == 'B' else 1))\n",
         "test_detail.Type = test_detail.Type.apply(lambda x: 3 if x == 'A' else(2 if x == 'B' else 1))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1720,7 +1731,7 @@
       "source": [
         "make_continuous_plot('Temperature')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1757,7 +1768,7 @@
         "train_detail = train_detail.drop(columns=['Temperature'])\n",
         "test_detail = test_detail.drop(columns=['Temperature'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1781,7 +1792,7 @@
       "source": [
         "make_continuous_plot('CPI')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1818,7 +1829,7 @@
         "train_detail = train_detail.drop(columns=['CPI'])\n",
         "test_detail = test_detail.drop(columns=['CPI'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1842,7 +1853,7 @@
       "source": [
         "make_continuous_plot('Unemployment')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1879,7 +1890,7 @@
         "train_detail = train_detail.drop(columns=['Unemployment'])\n",
         "test_detail = test_detail.drop(columns=['Unemployment'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1903,7 +1914,7 @@
       "source": [
         "make_continuous_plot('Size')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1991,7 +2002,7 @@
         "    weights = dataset.IsHoliday.apply(lambda x: 5 if x else 1)\n",
         "    return np.round(np.sum(weights*abs(real-predicted))/(np.sum(weights)), 2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2108,7 +2119,7 @@
         "            result.append({'Max_Depth': depth, 'Estimators': estimator, 'WMAE': np.mean(wmaes_cv)})\n",
         "    return pd.DataFrame(result)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2134,7 +2145,7 @@
         "        result.append({'Max_Feature': feature, 'WMAE': np.mean(wmaes_cv)})\n",
         "    return pd.DataFrame(result)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2162,7 +2173,7 @@
         "            result.append({'Min_Samples_Leaf': leaf, 'Min_Samples_Split': split, 'WMAE': np.mean(wmaes_cv)})\n",
         "    return pd.DataFrame(result)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2196,7 +2207,7 @@
         "X_train = train_detail[['Store','Dept','IsHoliday','Size','Week','Type','Year']]\n",
         "Y_train = train_detail['Weekly_Sales']"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2225,7 +2236,7 @@
         "\n",
         "random_forest(n_estimators, max_depth)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2417,7 +2428,7 @@
         "\n",
         "random_forest_II(n_estimators=58, max_depth=27, max_features=max_features)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2568,7 +2579,7 @@
         "random_forest_III(n_estimators=58, max_depth=27, max_features=6, \n",
         "                  min_samples_split=min_samples_split, min_samples_leaf=min_samples_leaf)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2759,7 +2770,7 @@
         "RF = RandomForestRegressor(n_estimators=58, max_depth=27, max_features=6, min_samples_split=3, min_samples_leaf=1)\n",
         "RF.fit(X_train, Y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2812,7 +2823,7 @@
         "X_test = test_detail[['Store', 'Dept', 'IsHoliday', 'Size', 'Week', 'Type', 'Year']]\n",
         "predict = RF.predict(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2860,7 +2871,7 @@
         "Final = X_test[['Store', 'Dept', 'Week']]\n",
         "Final['Weekly_Sales'] = predict"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2892,7 +2903,7 @@
         "            end as last_sales\n",
         "        from Final)\"\"\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2928,7 +2939,7 @@
         "sample_submission['Weekly_Sales'] = Final_adj['Weekly_Sales_Adjusted']\n",
         "sample_submission.to_csv('submission.csv',index=False)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2943,7 +2954,7 @@
         "##   ER.VIDIT AGARWAL\n",
         "##     PH - 9997302747"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2956,7 +2967,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
